# jieba-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  dict.txt  docker_examples.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  periodic.yml  release.yml  stale.yml
examples/: comparison_test.rs  docker_test.py  hmm_test.rs
src/: lib.rs
