[package]
name = "rust-jieba"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_jieba"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
regex = "1.10"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.27"

# Python extension linking configuration
[env]
PYTHON_SYS_EXECUTABLE = "/Users/fatelei/rust-jieba/venv/bin/python"
