[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust-jieba"
version = "0.1.0"
description = "A Rust implementation of jieba Chinese text segmentation with Python bindings"
authors = [{name = "Rust Jieba", email = ""}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]